[gd_scene load_steps=16 format=3 uid="uid://bnv0o4pvq2ads"]

[ext_resource type="PackedScene" uid="uid://cjbnosxi4m18l" path="res://characters/bear/bear_new.tscn" id="1_3nfvf"]
[ext_resource type="Script" path="res://cutscenes/playable/cage_attack_tutorial.gd" id="1_uu30b"]
[ext_resource type="Texture2D" uid="uid://oo467qtavnb8" path="res://assets/New_Bear/images/Wheel.png" id="3_1vipc"]
[ext_resource type="Texture2D" uid="uid://cx8dc0bj8r1lp" path="res://assets/New_Bear/images/Pedal.png" id="4_c4yca"]
[ext_resource type="Texture2D" uid="uid://orkdr4eoifpk" path="res://assets/New_Bear/images/saddle.png" id="5_fymm2"]
[ext_resource type="Texture2D" uid="uid://dvam2rf1vgrf" path="res://assets/New_Bear/images/L&SH.png" id="6_7dqj7"]
[ext_resource type="LabelSettings" uid="uid://brp3qn5x2peqk" path="res://cutscenes/basic_font.tres" id="7_ieeqj"]
[ext_resource type="AudioStream" uid="uid://c5ttv3v5eb0bf" path="res://assets/Sounds/278172__adharca__metal-tube-5.ogg" id="8_2d8w6"]
[ext_resource type="AudioStream" uid="uid://lxmxxbjwhs6k" path="res://assets/Sounds/metal-pipe-230698.mp3" id="9_xr85p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nocro"]
size = Vector2(4594, 174)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_skiiu"]
size = Vector2(4318, 174)

[sub_resource type="Animation" id="Animation_mcepo"]
resource_name = "BEGIN"
length = 12.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Curtain:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 9, 12),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"play_stand_up"
}, {
"args": [],
"method": &"play_run"
}, {
"args": [],
"method": &"play_idle"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Camera2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2, 4, 10.5, 12),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1257, 181), Vector2(1257, 181), Vector2(69, 65), Vector2(69, 65), Vector2(809, 69)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Camera2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Camera2D:zoom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2, 4, 10.5, 12),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.82, 0.82), Vector2(0.82, 0.82), Vector2(0.45, 0.45), Vector2(0.45, 0.45), Vector2(0.63, 0.63)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 9, 12),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-504, 475), Vector2(-504, 475), Vector2(425, 475)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../SubtitleControl:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(12),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2p0ov"]
resource_name = "END"
length = 9.0
step = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 5, 8, 9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"play_idle"
}, {
"args": [],
"method": &"play_run"
}, {
"args": [],
"method": &"play_pick_up"
}, {
"args": [],
"method": &"play_end_run"
}, {
"args": [],
"method": &"emit_cutscene_ended"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(809, 69)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Camera2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Camera2D:zoom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.63, 0.63)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2, 5, 8, 9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(425, 475), Vector2(425, 475), Vector2(937, 479), Vector2(937, 479), Vector2(2157, 479)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Cycle:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 6.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Curtain:color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(8, 9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../SubtitleControl:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_s7ix2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Curtain:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Camera2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Camera2D:zoom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.45, 0.45)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-504, 475)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Cycle:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../SubtitleControl:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_upfie"]
_data = {
"BEGIN": SubResource("Animation_mcepo"),
"END": SubResource("Animation_2p0ov"),
"RESET": SubResource("Animation_s7ix2")
}

[node name="CageAttackTutorial" type="Node2D"]
script = ExtResource("1_uu30b")

[node name="BearNew" parent="." instance=ExtResource("1_3nfvf")]
position = Vector2(-504, 475)

[node name="Camera2D" type="Camera2D" parent="."]
ignore_rotation = false
zoom = Vector2(0.45, 0.45)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(181, 242)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-317, 300)
shape = SubResource("RectangleShape2D_nocro")
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-2370, 274)
rotation = 1.5708
shape = SubResource("RectangleShape2D_skiiu")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1938, 216)
rotation = 1.5708
shape = SubResource("RectangleShape2D_skiiu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../BearNew")
libraries = {
"": SubResource("AnimationLibrary_upfie")
}

[node name="Cycle" type="Node2D" parent="."]
z_index = 2
position = Vector2(1255, 362)
rotation = -1.79559

[node name="Wheel" type="Sprite2D" parent="Cycle"]
rotation = 0.103023
texture = ExtResource("3_1vipc")

[node name="Pedal" type="Sprite2D" parent="Cycle/Wheel"]
position = Vector2(-21.8125, 12.3781)
rotation = -0.436332
texture = ExtResource("4_c4yca")

[node name="Saddle" type="Sprite2D" parent="Cycle"]
position = Vector2(0, -60)
texture = ExtResource("5_fymm2")

[node name="Light" type="Sprite2D" parent="Cycle"]
texture = ExtResource("6_7dqj7")

[node name="ROFL" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 248.0
offset_top = -394.0
offset_right = 1309.0
offset_bottom = -229.0
grow_horizontal = 2
grow_vertical = 2
text = "IMAGINE YOU'RE IN PRISON"
label_settings = ExtResource("7_ieeqj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleControl" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -203.0
offset_top = 324.0
offset_right = 1829.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="TutorialSubtitle" type="Label" parent="SubtitleControl"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -82.5
offset_bottom = 82.5
grow_horizontal = 2
grow_vertical = 2
text = "Press [F] To Attack"
label_settings = ExtResource("7_ieeqj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Curtain" type="ColorRect" parent="."]
z_index = 999
offset_left = -2730.0
offset_top = -1620.0
offset_right = -2398.0
offset_bottom = -1296.0
scale = Vector2(15.8383, 9.65236)
color = Color(0, 0, 0, 1)

[node name="CageHit" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_2d8w6")
volume_db = -10.0
bus = &"SFX"

[node name="CageBreak" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_xr85p")
volume_db = -5.0
bus = &"SFX"
